--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body{
   background: hsl(0, 0%, 100%);
   border-radius: 25px;
   width: 320px;
-  height: 450px;
+  height: 500px;
 }
 
 .card .container{
   justify-content: center;
   align-items: center;
   width: 280px;
-  height: 420px;
+  height: 450px;
   border-radius: 13px;
   background: hsl(0, 0%, 100%);
 }
@@ -42,17 +42,18 @@ body{
   justify-content: center;
 }
 
-.card .container h2{
+.card .container h1{
+  color: rgb(31, 50, 81);
   text-align: center;
   font-size: 22px;
   font-weight: 700;
-  padding: 10px;
+  padding-top: 20px;
 }
 
 .card .container p{
   color: hsl(220, 15%, 55%);
   text-align: center;
-  padding: 8px;
+  padding: 18px;
 }
 
 .attribution{
@@ -81,7 +82,7 @@ body{
     border-radius: 15px;
   }
   
-  .card .container h2 {
+  .card .container h1 {
     font-size: 28px;
     padding-top: 25px;
   }
